@@ -25,6 +25,9 @@
   a file included via ``[include]``, it will expand to the directory of
   that file.  Thanks to Alex Eftimie and Zoltan Toth-Czifra for the patches.
 
+- An undocumented feature where multiple ``supervisorctl`` commands could be
+  combined on a single line separated by semicolons has been removed.
+
 - ``supervisorctl`` will now set its exit status to a non-zero value when an
   error condition occurs.  Previous versions did not set the exit status so
   it was always zero.  Patch by Luke Weber.
